--- a/css/10.css
+++ b/css/10.css
@@ -50,3 +50,32 @@
 	height: 50px;
 	background: #ff0000;
 }
+
+/* 184 */
+.square184 {
+	width: 50px;
+	height: 50px;
+	background: #ff0000;
+}
+
+/* 185 */
+.square185 {
+	width: 50px;
+	height: 50px;
+	background: #ff0000;
+}
+
+/* 186 */
+.square186 {
+	width: 50px;
+	height: 50px;
+	background: #ff0000;
+}
+
+/* 190 */
+.stoker.on {
+	position: fixed;
+	top: 0;
+	left: 0;
+	will-change: transform;
+}
